# OpenGLTutorial

./: .gitignore  CMakeLists.txt  README.md
scripts/: getTextures.ps1
shaders/: CMakeLists.txt
src/: CMakeLists.txt  HelloTriangle.h  SDLContext.cpp  SDLContext.h  Shader.cpp  Shader.h  Textures.h  main.cpp
